syntax = "proto3";

package rhythmicity.search_api;

option go_package = "github.com/nichol20/rhythmicity/search-api/application/grpc/pb";

message Track {
    string id = 1;
    string trackName = 2;
    repeated string artistNames = 3;
    string albumName = 4;
    string lyrics = 5;
    bool explicit = 6;
    uint64 playCount = 7;
    repeated string genres = 8;
    repeated string styles = 9;
    string  imageUrl = 10;
}

message SearchRequest {
    enum Kind {
        ALL = 0;
        ARTIST = 1;
        ALBUM = 2;
        TRACK = 3;
    }

    string query = 1;
    optional uint32  offset = 2;
    optional uint32 limit = 3;
    optional Kind kind = 4;
}

message SearchResponse {
    repeated Track tracks = 1;
}

service Search {
    rpc Search(SearchRequest) returns (SearchResponse) {};
}