// Original file: src/proto/track.proto


export interface YoutubeStatistics {
  'viewCount'?: (string);
  'likeCount'?: (string);
  'favoriteCount'?: (string);
  'commentCount'?: (string);
}

export interface YoutubeStatistics__Output {
  'viewCount'?: (string);
  'likeCount'?: (string);
  'favoriteCount'?: (string);
  'commentCount'?: (string);
}
